manifests/doc-index-updater/base/authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: doc-index-updater
  namespace: doc-index-updater
spec:
  selector:
    matchLabels:
      app: doc-index-updater
