manifests/doc-index-updater/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: doc-index-updater
  labels:
    istio-injection: enabled
